# signing-service-api

./: .env  .gitignore  Cargo.toml  README.md
abi/: SignerContract.json
src/: api_handler.rs  config.rs  main.rs
