[package]
name = "signing-service-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest =  { version = "0.11", features = ["json"] }
ethers = "2.0.14"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
dotenv = "0.15.0"

[[bin]]
name = "signing-service-api"
path = "src/main.rs"
